--- a/index.html
+++ b/index.html
@@ -646,9 +646,9 @@
               <p style="margin-left: 20px; margin-top: 50px">
                 <b>
                   Tigist Mengesha is a Lead Software Engineer who has worked in
-                  big companies like Avancer and other companies both in
+                  international IT companies both in
                   Ethiopia and the US. She has backgrounds in Project Management
-                  and IT and incorporate them to effectively lead teams to solve
+                  and software development and incorporate them to effectively lead teams to solve
                   problems related to the modern technology. She was born and
                   raised in Ethiopia but currently lives in the US. Hear more
                   about them in
