--- a/index.html
+++ b/index.html
@@ -646,7 +646,7 @@
               <p style="margin-left: 20px; margin-top: 50px">
                 <b>
                   Tigist Mengesha is a Lead Software Engineer who has worked in
-                  international IT companies both in
+                  international IT companies like Avancer, TechnoBrain and other companies both in
                   Ethiopia and the US. She has backgrounds in Project Management
                   and software development and incorporate them to effectively lead teams to solve
                   problems related to the modern technology. She was born and
